# mawk-2

./: CONTACT  ChangeLog.beebe  INSTALL  Makefile.in  README  THANKS  array.c  array.h  array.w  bi_funct.c  bi_funct.h  bi_vars.c  bi_vars.h  cast.c  code.c  code.h  config.hin  configure  configure.ac  da.c  error.c  execute.c  fcall.c  field.c  field.h  files.c  files.h  fin.c  fin.h  hash.c  init.c  init.h  int.c  int.h  jmp.c  jmp.h  kw.c  main.c  makescan.c  mawk.h  (+23 more)
cdoc/: Makefile
examples/: eatc.awk  primes.awk
rexp/: Makefile  rexp.c  rexp.h  rexp0.c  rexp1.c  rexp2.c  rexp3.c  rexpdb.c  wait.c  wait.h
test/: fpe_test  mawktest  pipetest  pipetest.out
test/okay/: mawktest.out
